--- a/part2/part-d/phonebook/src/index.css
+++ b/part2/part-d/phonebook/src/index.css
@@ -53,7 +53,15 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.error {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
